# nuitka-build-config

./: .gitignore  MANIFEST.in  README.md  babel.cfg  create_json_schema.py  pyproject.toml  schema.json
locale/: nbc.pot
locale/en_US/: nbc.po
locale/ru_RU/: nbc.po
nuitka_build_config/: __init__.py  _english_i18n_mode.py  argv_add_method.py  base.py  builder.py  decorators.py  descriptors.py  generator.py  i18n.py  mainparser.py  typings.py  utils.py
nuitka_build_config/builder/: __init__.py  base.py
nuitka_build_config/locale/: nbc.pot
nuitka_build_config/locale/en_US/LC_MESSAGES/: nbc.mo  nbc.po
nuitka_build_config/locale/ru_RU/LC_MESSAGES/: nbc.mo  nbc.po
nuitka_build_config/models/: __init__.new.py  __init__.py  osparams.py
nuitka_build_config/typings/: __init__.py  models.py  osparams.py
