[project]
name = "nuitka-build-config"
version = "0.1.0"
description = "Nuitka build config"
requires-python = ">=3.9"
dependencies = [
    "argparse-typing>=0.2.0",
    "locale-plus>=0.1.2",
    "nuitka>=4",
    "pathlike-typing>=1.0.0",
    "pydantic>=2",
    "pyyaml>=6.0.3",
]

[project.scripts]
nbc = "nuitka_build_config:main"
nbc-generator = "nuitka_build_config.generator:main"

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "devscript>=0.1.1",
]

[devscript]
sync = "git pull origin && uv sync"
compile_i18n = "pybabel compile -d nuitka_build_config/locale -D nbc"
generate_i18n_pot = "pybabel extract -F ./babel.cfg -o ./nuitka_build_config/locale/nbc.pot ."
