[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuitka-build-config"
version = "0.1.6"
description = "Nuitka build config"
requires-python = ">=3.9"
dependencies = [
    "argparse-help-i18n>=0.2.2",
    "argparse-typing>=0.2.0",
    "locale-plus>=0.1.2",
    "nuitka[all]>=4",
    "pathlike-typing>=1.0.0",
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "scparser>=0.1.2",
    "ordered-set>=4.1.0",
]
license = {text = "MIT"}
authors = [
    {name = "MagIlyasDOMA", email = "magilyas.doma.09@list.ru"}
]
readme = "README.md"

[project.scripts]
nbc = "nuitka_build_config:main"

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "devscript>=0.1.1",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
nuitka_build_config = ["locale/**"]

[devscript]
sync = "git pull origin && uv sync"
compile_i18n = "pybabel compile -d nuitka_build_config/locale -D nbc"
generate_i18n_pot = "pybabel extract -F ./babel.cfg -o ./nuitka_build_config/locale/nbc.pot . --project=\"nuitka-build-config\" --version=\"0.1.0\" --last-translator=\"MagIlyasDOMA <magilyas.doma.09@list.ru>\""
